# models/utilities.go
@@ -1,10 +1,12 @@
 package models
 
 import (
+	//mysql driver
 	_ "github.com/go-sql-driver/mysql"
 	"github.com/jinzhu/gorm"
 )
 
+//DBConfig hadles database configuration objects
 type DBConfig struct {
 	Host     string
 	Port     string
@@ -13,24 +15,29 @@ type DBConfig struct {
 	Database string
 }
 
+//ResponsePackage shows how the rsponse data over the api will look like
 type ResponsePackage struct {
 	Code   int          `json:"code"`
 	Body   ResponseBody `json:"body"`
 	Status string       `json:"status"`
 }
 
+//ResponseBody is just a struct that is used to wrap some objects to one
 type ResponseBody struct {
 	Role []*Roles `json:"roles"`
 	User User     `json:"user"`
 }
 
-type ApiData struct {
+//APIData shows the structure the API wants it's data
+type APIData struct {
 	User User `json:"user"`
 	Body User `json:"body"`
 }
 
+//DB stores new DB configuration
 var DB = new(DBConfig)
 
+//Conn exports Gorm DB pointer
 var Conn *gorm.DB
 
 func init() {
@@ -51,10 +58,10 @@ func init() {
 //Roles struct handles database representation of the model.
 type Roles struct {
 	gorm.Model
-	UserID   uint   `gorm:"type:int(10)"`
-	UserName string `gorm:"type:varchar(100)"`
-	Code     int    `gorm:"type:int(10)"`
-	Role     string `gorm:"type:varchar(100)"`
+	UserID   uint   `gorm:"type:int(10)" json:"user_id"`
+	UserName string `gorm:"type:varchar(100)" json:"user_name"`
+	Code     int    `gorm:"type:int(10)" json:"code"`
+	Role     string `gorm:"type:varchar(100)" json:"role"`
 }
 
 //Response sends bad response data to you
@@ -113,6 +120,7 @@ func AssociateRoleUser(r interface{}, u User) interface{} {
 	return respond
 }
 
+//GetUserRoles gets all roles of a user in an array
 func GetUserRoles(u User) interface{} {
 	type response struct {
 		Role []*Roles
@@ -126,44 +134,79 @@ func GetUserRoles(u User) interface{} {
 	return res
 }
 
+//CheckUserExists functions returns ture or false using email to verify
 func CheckUserExists(u User) bool {
 	findEmail := Conn.Where("email = ?", u.Email).Find(&u)
 	//If email doesn't exist, proceed to check if username exist
 	if findEmail != nil && findEmail.Error != nil {
 		return false
-	} else {
-		return true
 	}
+	return true
 }
 
+//CheckUsername checks if username exists as username is Unique
 func CheckUsername(u User) bool {
 	findUsername := Conn.Where("username = ?", u.Username).Find(&u)
 	//If usernmae doesn't exist?
 	if findUsername != nil && findUsername.Error != nil {
 		return false
-	} else {
-		return true
 	}
+	return true
 }
 
+//CheckSuperAdmin checks if a particular user posing to be a superadmin is actually true or false
 func CheckSuperAdmin(u User) bool {
 	var r Roles
 	findRole := Conn.Where("user_id = ? AND code = 99", u.ID).Find(&r)
 	//If Role doesn't exist?
 	if findRole != nil && findRole.Error != nil {
 		return false
-	} else {
-		return true
 	}
+	return true
 }
 
+//CheckSubAdmin checks if a user is a Sub Admin
 func CheckSubAdmin(u User) bool {
 	var r Roles
 	ifSubAdmin := Conn.Where("user_id = ? AND code = 88", u.ID).Find(&r)
 	//if user not a sub Admin?
 	if ifSubAdmin != nil && ifSubAdmin.Error != nil {
 		return false
-	} else {
-		return true
 	}
+	return true
+}
+
+//DoesSupAdminExist checks if a sup admin exist in the system or not
+func DoesSupAdminExist() bool {
+	var r Roles
+	ifsupadminexists := Conn.Where("code == 99").Find(&r)
+	//If role does not exist
+	if ifsupadminexists != nil && ifsupadminexists.Error != nil {
+		return false
+	}
+	return true
+}
+
+//ResponseObject for roles and users
+type ResponseObject struct {
+	Role Roles `json:"role"`
+	User User  `json:"user"`
+}
+
+//GetUserFromRole gets the user information from the role
+func GetUserFromRole(roleArray []Roles) interface{} {
+
+	var u User
+
+	var res []*ResponseObject
+	for _, role := range roleArray {
+		Conn.Where("id = ?", role.ID).Find(&u)
+		response := new(ResponseObject)
+		response.Role = role
+		response.User = u
+
+		res = append(res, response)
+	}
+
+	return res
 }
